@@ -1,3 +1,11 @@
+2015-08-18  Segher Boessenkool  <segher@kernel.crashing.org>
+
+	Backport from mainline:
+	2015-08-08  Segher Boessenkool  <segher@kernel.crashing.org>
+
+	PR rtl-optimization/67028
+	* gcc.dg/pr67028.c: New testcase.
+
 2015-08-16  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline:
